# ChangeLog for app-pda/libplist
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/libplist/ChangeLog,v 1.35 2014/04/06 07:50:42 ssuominen Exp $

  06 Apr 2014; Samuli Suominen <ssuominen@gentoo.org> -libplist-1.8-r1.ebuild,
  metadata.xml:
  old

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> libplist-1.10.ebuild:
  Stable for x86, wrt bug #491444

  23 Nov 2013; Pacho Ramos <pacho@gentoo.org> libplist-1.10.ebuild:
  amd64 stable, bug #491444

*libplist-1.10 (11 May 2013)

  11 May 2013; Samuli Suominen <ssuominen@gentoo.org> +libplist-1.10.ebuild:
  Version bump.

  10 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unused flag description from metadata

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libplist-1.8-r1.ebuild:
  Add ~arm, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> libplist-1.8-r1.ebuild:
  Add ~ppc, wrt bug #449220

  03 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -libplist-1.8.ebuild:
  old

  16 Aug 2012; Johannes Huber <johu@gentoo.org> libplist-1.8-r1.ebuild:
  Stable for x86, wrt bug #423155

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> libplist-1.8-r1.ebuild:
  Stable for amd64, wrt bug #423155

  16 May 2012; Alexis Ballier <aballier@gentoo.org> libplist-1.8-r1.ebuild:
  keyword ~amd64-fbsd

  31 Mar 2012; Davide Pesavento <pesa@gentoo.org> libplist-1.8-r1.ebuild:
  Raise cython dep to avoid bug 410349.

*libplist-1.8-r1 (31 Mar 2012)

  31 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +libplist-1.8-r1.ebuild:
  USE="python" is for building Cython based python binding for compability with
  libimobiledevice >= 1.1.2

  25 Mar 2012; Davide Pesavento <pesa@gentoo.org>
  -files/libplist-1.4-gcc46.patch, -libplist-1.4.ebuild, metadata.xml:
  Remove old.

  15 Mar 2012; Jeff Horelick <jdhore@gentoo.org> libplist-1.8.ebuild:
  marked x86 per bug 407577

  11 Mar 2012; Agostino Sarubbo <ago@gentoo.org> libplist-1.8.ebuild: