@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST libplist-1.10.tar.bz2 82519 SHA256 f44c52a0f8065d41d44772a7484f93bc5e7da21a8f4a9ad3f38a36b827eeff0b SHA512 dcee2b3bbff6c9d476b1663292e0a80b2f1c6d3286aff5488e839c5214c02915d0ad469fbbbaab25708a2e0e143e1ce4304da5834f1e5cbcabc54380181ef07f WHIRLPOOL 7076e2231f1cd728e3e4b347a898f71df38783daf34028f7832774816f07d415d3735cb9883b929735bfade160cb492533a1692e729bfc0891908adeab6366d8
+DIST libplist-1.11.tar.bz2 355365 SHA256 28e1518eeea054f4eec9a1c93d9575d56193b290c53c1b753773a5e0add95235 SHA512 1c415670877c7091ded541dc36a6bc91132f714a0d3590090ead40ed972e0e076285441d3d219827cc425bc41fcbc101825e937620b7b4f2c1afe4bef8487fa2 WHIRLPOOL a2c74d3454b80696ab45922fe410833912554588d9ed5c177cbed1865bd98099b29a20ab6cf14a0b7c98de59d082fd15392915a94f33d27b16109300a0de2e4c
 EBUILD libplist-1.10.ebuild 1192 SHA256 198aa591d953cce3273930f36323ccd4527f32e693d6629293be13486a9aba0d SHA512 824bbf5a0b55816bc96c96d5151abe643337ab5659629630fec0012c0c6c264a7f6989610de8d6480b8ddc4431d349eced8ce0c3c66672bfe74c422145727f46 WHIRLPOOL 5e7c42039e4780c44f7d723be16c8fd88a6000d75e8e4d9fd487eb89a24164b9270fcd7f9223638e70a76c564a935cdb097d4a29c1c3056c84109d3179d87a23
-MISC ChangeLog 4770 SHA256 6febc497aa2319259e76afece2b8aad44a1bf27a247d4b32a421398d84cf8606 SHA512 68b7221e642465547622483f9ccbe64084bd7bd1f9a81591a45385ed4843fcbd08a9a5073bc4fc0846e24219a6112532a208033a744d16d2327a054310eadc5f WHIRLPOOL 98bd24e22c9d80203fb0d038be0a19601eb1d50a36a4ae316075d5799294439e889e88f571a5741c01cdfb94f5c62d56c5705922c445b16c775d84029967c477
+EBUILD libplist-1.11.ebuild 1320 SHA256 681ce81755c3496eeb76625d810cbd193c1a8bfcba8d77110ef2368ee6260bbd SHA512 79c783fc9b67cc0d3fed74c8f19f8c36f0953dcc3e3839173be552f93b16a5a7b32b7005464bced6e639001a788d40b7577f99651fa9b220694e1af28c52ec89 WHIRLPOOL 6e2468cebc9565adfbd8b415ce08f05502e9bcda2153e61964d5a24141bd43ec132da2e3dfda1f1208af7f192c175c7a6e95da7e377c363da5e57c4e435bfe02
+MISC ChangeLog 5015 SHA256 e41ab8ef773c27046fcddfa477cd292f9af8ea4323a2d6209f7b8f30f31205f3 SHA512 ffeae516cd1363ab2b72e8c3f3fd2ef6099bd13a3214d3db28e02c3a6c101855dfacd96fdd6b210a9f4f52ff63f53860d0723444d368dd041294ff2be98697a1 WHIRLPOOL 83c319b5c9178fcbb0330b06e4167ba3e08c4b6f5c088e9d7c7bd333fc42be2b536344209976272d466b922263f6e998b594e7f321373f3a826699ff06b26e43
 MISC metadata.xml 219 SHA256 5076ade7454abe2682b523b2d014f26a9b900ba4b7cd726dd71cfdff238accd5 SHA512 27e2cc26b52c967790d8c41a127c04e15c33872a77f0490e876df8549dfaa79528bce20e2f8c51cb11bbfcd13ef09d6b882febe4a617775638df84554575b6c8 WHIRLPOOL cd6a7972273bd6dc9ae41bbe587248500ae8516bd9c76ef3fb9ddcfd90fe2b3719fcc295bd46e2b16b6fe06850efd0eb4b322bdec82ca093e9c5b6a8c0c8f27c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTQQX3AAoJEEdUh39IaPFNPl4IAIUSF6/z1UzUoI8rkkp6hmZH
-UzyYa13OmAsmcE2Br2RusiKqvJ+Gy0nvtsdF+ZCLOxQ0bqEZ7pLu8LmNcgOgfK6u
-s9CKVbg7nhIyAsrUKakAvbXXPCron+AqSVhqkVHkQXdUpKTPfKn87a0JzSXcw+Z2
-MOAb0Qq1KWxGIuKXs3wQK2f043XTzWsUIvURJtJlaEVfLKXOnCZiBKt+1fq0Y+U0
-1URl9eVsuAPFjD8LD4UiswbFUhM3ePNbwMktHQ7K+nzxrCa1ZsdMXK/Kaw2+TjBq
-2TZAOexeKZ869EK6FJeJZ6zs3XDhswrEpMvzNWPW0k+rhK+o7G/RjGcApZLSOs0=
-=Trln
+iQEcBAEBCAAGBQJTQQykAAoJEEdUh39IaPFNsegIAJ0SWzXmuj0Nei9cL8HzOSaj
+KprcDL8+MLgI5OAPuj0Z0vJ1Cu8GLCaIb1IRvJMdo+IvxgitamE+NzweokCRV1BV
+j//T7dZzCxK2wkNQgOcya0E1jltLlwMT1YhNWjR96A63h8dvp7leCQhheryHQAk6
+bVCNSKNgC29ZWYE16KHmm7rhUsvLWhP4QUUHGvOkDRZHA1h0eupc1ve8o8dbigcn
+08e3triLy33Kpdc3hmwBPzdqs7M6U3OtePaZFmS2uyey/figQ4JeRzSkZnusHCoO
+qHDJoKgEz6emBIXJhI1B29k7yHKE1UcLW4mtPHD6/vqLPqsT4LO2kq0G/8T8vTs=
+=bb7V
 -----END PGP SIGNATURE-----
